EPBDS-13815 "Deploy" button is not available for the user assigned to the group that has all necessary for deployment permissions